--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">LinkedIn</a>
+              <a class="nav-link" href="https://www.linkedin.com/in/chinmay4o">LinkedIn</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Twitter</a>
+              <a class="nav-link" href=" https://twitter.com/Chinmay4o">Twitter</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Github</a>
+              <a class="nav-link" href="https://github.com/chinmay4o">Github</a>
             </li>
           </ul>
         </div>
