--- a/index.html
+++ b/index.html
@@ -77,52 +77,56 @@
             </div>
 
             <!-- ============ change cash offered ============= -->
-            <table class="table table-striped table-bordered table-dark">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Notes</th>
-                  <th scope="col">No. of Notes</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>2000</td>
-                  <td class="no-notes"></td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>500</td>
-                  <td class="no-notes"></td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>100</td>
-                  <td class="no-notes"></td>
-                </tr>
-                <tr>
-                  <th scope="row">4</th>
-                  <td>20</td>
-                  <td class="no-notes"></td>
-                </tr>
-                <tr>
-                  <th scope="row">5</th>
-                  <td>10</td>
-                  <td class="no-notes"></td>
-                </tr>
-                <tr>
-                  <th scope="row">6</th>
-                  <td>5</td>
-                  <td class="no-notes"></td>
-                </tr>
-                <tr>
-                  <th scope="row">7</th>
-                  <td>1</td>
-                  <td class="no-notes"></td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="check">
+
+              <table class="table table-striped table-bordered table-dark">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Notes</th>
+                    <th scope="col">No. of Notes</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>2000</td>
+                    <td class="no-notes"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>500</td>
+                    <td class="no-notes"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>100</td>
+                    <td class="no-notes"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>20</td>
+                    <td class="no-notes"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td>10</td>
+                    <td class="no-notes"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6</th>
+                    <td>5</td>
+                    <td class="no-notes"></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">7</th>
+                    <td>1</td>
+                    <td class="no-notes"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+           
           </div>
         </div>
       </section>
